improve support for relative, absolute and urls with missing protocol